更新办赛漫谈

--- a/content/docs/blog/办赛漫谈.md
+++ b/content/docs/blog/办赛漫谈.md
@@ -57,5 +57,35 @@ services:
 - 共计启动了 2837 次靶机
 - 有 1480200 次 flag 提交（本次比赛有压测题），其中 2119 次成功
 
+我们有两个特殊需求：一是接入统一身份认证，二是特殊榜单（按校区、是否新生、题目方向，共有 {{< katex >}}4\times 3\times 3 = 36{{< /katex >}} 个排行榜）。前者的实现方法是：在 admin 路由下提供一个 `registerOrLogin` 接口，然后独立实现 SSO 网站；SSO 站验证完选手身份后，调用 H3CTF 平台的 `registerOrLogin` 接口，获取到 jwt，返回给选手并引导选手跳转到比赛平台。
 
-H3CTF 整体来说很圆满，但靶机管理器也出过两次 bug。这次学到的教训主要是代码层面的，例如不要过于相信 PostgreSQL 的 JSONB 相关优化器、要加锁防止 checkflag 条件竞争等。
+至于排行榜，临时采用了下面的实现。后来发现 Spring Data JDBC 会把字面量改成变量，比如 `extra_info->>'stage' = 'BKS'` 会被改成 `extra_info->>$20 = $21`，导致查询速度慢于预期，比赛结束时查一次总榜大约需要 1~2s 时间。
+```kotlin
+interface RankingRepository: CrudRepository<User, Int> {
+    @Query("""
+WITH g AS (SELECT task_id, point, user_id, submit_time FROM view_user_solve AS u JOIN view_task_score AS s ON s.id = u.task_id),
+     k AS (SELECT g.*, extra_info, tags FROM g, users, tasks, problems WHERE users.id = g.user_id AND tasks.id = g.task_id AND problems.id = tasks.problem_id AND problems.visible),
+     f1 AS (SELECT * FROM k WHERE (:tag IS NULL OR (
+        -- 要求是本校学生；web方向包含web+crypto+misc，binary方向包含pwn+reverse+crypto+misc
+        extra_info ?? 'sid' AND (
+            (tags ?? 'Crypto') 
+            OR (tags ?? 'Misc')
+            OR (:tag = 'web' AND tags ?? 'Web') 
+            OR (:tag = 'binary' AND (tags ?? 'Pwn' OR tags ?? 'Reverse'))
+        )))),
+     f2 AS (SELECT * FROM f1 WHERE (:location IS NULL OR (extra_info->>'location' = :location))),
+     f3 AS (SELECT * FROM f2 WHERE (:isNewbie IS NULL OR (
+        extra_info ?? 'sid' AND (
+            (:isNewbie = true AND extra_info->>'stage' = 'BKS' AND (extra_info->>'grade')::integer >= 24)
+            OR (:isNewbie = false AND NOT (extra_info->>'stage' = 'BKS' AND (extra_info->>'grade')::integer >= 24))
+        )
+     ))),
+     p AS (SELECT * FROM f3),
+     t AS (SELECT user_id, SUM(point) AS total_point, MAX(submit_time) AS last_submit FROM p GROUP BY user_id)
+SELECT id AS user_id, username as user_name, avatar_id, total_point AS score, last_submit AS last_submission_at, extra_info FROM users JOIN t ON users.id = t.user_id ORDER BY score DESC, last_submission_at
+""")
+    fun getRanking(tag: String?, location: String?, isNewbie: Boolean?): List<RankingDto>
+}
+```
+
+H3CTF 整体来说很圆满，但靶机管理器也出过两次 bug。这次学到的教训主要是代码层面的，例如尽量不在查询条件中使用 JSONB、要加锁防止 checkflag 条件竞争、要考虑给排行榜上缓存等。
