--- a/content/docs/blog/我们需要怎样的平台.md
+++ b/content/docs/blog/我们需要怎样的平台.md
@@ -5,7 +5,7 @@ title: 引言：我们需要怎样的平台
 
 # 引言：我们需要怎样的平台
 
-> ……然而，Cranberry 作为“下一代 CTF 竞赛系统”的愿景，是使那些曾经因平台限制而无法发挥的出题人的脑洞，得以亮相在选手面前。于是，Cranberry 必然要设计得足够灵活，这不是一件简单的事。越灵活的系统，越容易过度设计，架构变得越来越复杂，最终每次添加功能都成为一场灾难。  
+> ……然而，**Cranberry 作为“下一代 CTF 竞赛系统”的愿景，是使那些曾经因平台限制而无法发挥的出题人的脑洞，得以亮相在选手面前**。于是，Cranberry 必然要设计得足够灵活，这不是一件简单的事。越灵活的系统，越容易过度设计，架构变得越来越复杂，最终每次添加功能都成为一场灾难。  
 > -- Ruan Xingzhi, [2025/8/11](https://www.ruanx.net/cranberry-ctf-architecture/)
 
 CTF 平台的开发者，一直在“过度设计”与“缺乏扩展性”之间维持平衡。Cranberry 的核心目标，就是在拥有极致扩展性的前提下，维持设计的简洁。过去的经验告诉我们，如果我们设计时不考虑好各种各样的使用场景，那么我们写出来的东西八成不可扩展；但如果我们什么功能都想“既要又要”，那么八成会走向过度设计。本文将给出一个我们理想中的竞赛平台的样子，以及，更重要地，说明我们准备放弃哪些功能。
