--- a/content/docs/blog/架构设计.md
+++ b/content/docs/blog/架构设计.md
@@ -5,5 +5,47 @@ title: Cranberry 架构设计
 
 # Cranberry 架构设计
 
+## 基本结构
 
-TODO
+逻辑上说，**Cranberry 由三个子系统构成：平台（Platform）、题目中心（Challenge Center）、实例管理器（Instance Manager）**。在实践上，实例管理器一般是现成的（例如 Docker Swarm）。我们只规定平台与题目中心之间的通讯接口，不限制题目中心与实例管理器的通讯方式。每种靶机形式都会有自己的题目中心，例如 docker 题目中心、PVE 题目中心。**一个平台可以连接多个题目中心，一个题目中心也可以给多个平台供题。**
+
+```mermaid
+%% Cranberry 系统架构图
+%% 一个平台 ↔ 多个题目中心 ↔ 各自实例管理器（通讯方式不限）
+
+graph TD
+    subgraph 平台层
+        PF[Platform]
+    end
+
+    subgraph 题目中心层
+        CC1[Challenge-Center-Docker]
+        CC2[Challenge-Center-PVE]
+        CCn[...其它形式]
+    end
+
+    subgraph 实例管理层
+        IM1[Docker Swarm]
+        IM2[PVE]
+        IMn[...]
+    end
+
+    %% 平台与题目中心：规范接口
+    PF <-->|规范接口| CC1
+    PF <-->|规范接口| CC2
+    PF <-->|规范接口| CCn
+
+    %% 题目中心与实例管理器：通讯方式不限
+    CC1 <-.-> IM1
+    CC2 <-.-> IM2
+    CCn <-.-> IMn
+
+    %% 说明
+    classDef plat fill:#b3e5fc,stroke:#01579b
+    classDef cc   fill:#c8e6c9,stroke:#1b5e20
+    classDef im   fill:#ffe0b2,stroke:#e65100
+
+    class PF plat
+    class CC1,CC2,CCn cc
+    class IM1,IM2,IMn im
+```
