Cranberry 架构概览 编写平台章节

--- a/content/docs/blog/办赛漫谈.md
+++ b/content/docs/blog/办赛漫谈.md
@@ -8,7 +8,7 @@ title: 办赛漫谈：从 CTFd 到 H3CTF
 
 ### 2020 · 五一欢乐赛
 
-笔者还记得 2020 年的春天，那是最终都没有开学的一个学期。笔者第一次办赛，找来了 Lilac 的几位队员出了些题，就开始到处宣传，把哈工大的新生和外校的朋友们都拉来参赛。当时我们只有 CTFd 可以用，而 CTFd 是不支持动态靶机的。笔者的解决方案是用 docker compose 给一道题目开多个实例：
+2020 年的春天，笔者第一次办赛，找来了 Lilac 的几位队员出了些题，就开始到处宣传，把哈工大的新生和外校的朋友们都拉来参赛。当时我们只有 CTFd 可以用，而 CTFd 是不支持动态靶机的。笔者的解决方案是用 docker compose 给一道题目开多个实例：
 
 ```yaml
 # docker-compose --compatibility up -d --build --scale app=4
@@ -88,4 +88,4 @@ SELECT id AS user_id, username as user_name, avatar_id, total_point AS score, la
 }
 ```
 
-H3CTF 整体来说很圆满，但靶机管理器也出过两次 bug。这次学到的教训主要是代码层面的，例如尽量不在查询条件中使用 JSONB、要加锁防止 checkflag 条件竞争、要考虑给排行榜上缓存等。
+H3CTF 整体来说很圆满，但靶机管理器也出过两次 bug。这次学到的教训主要是代码层面的，例如尽量不在查询条件中使用 JSONB、要加锁防止 checkflag 条件竞争、要考虑缓存排行榜等。
