--- a/content/docs/blog/架构设计.md
+++ b/content/docs/blog/架构设计.md
@@ -68,8 +68,8 @@ graph TD
   </thead>
   <tbody>
     <tr>
-      <td rowspan="4">后端</td>
-      <td rowspan="4">Kotlin 2.2 / GraalVM JDK 24</td>
+      <td rowspan="5">后端</td>
+      <td rowspan="5">Kotlin 2.2 / GraalVM JDK 24</td>
       <td>Spring Boot</td>
       <td>3.5.6</td>
     </tr>
@@ -82,6 +82,10 @@ graph TD
     </tr>
     <tr>
       <td>Spring Security</td>
+    </tr>
+    <tr>
+      <td>GraalPy</td>
+      <td>跟随 GraalVM</td>
     </tr>
     <tr>
       <td>关系型数据库</td>
