--- a/content/docs/blog/架构设计.md
+++ b/content/docs/blog/架构设计.md
@@ -112,10 +112,22 @@ graph TD
 几个关键点：
 - 用户信息仅在平台中存储。后方的题目中心、实例管理器都不知道用户的存在。
 - 平台完全不管理题目内容。逻辑上，它只是担任用户的 agent，向题目中心请求题目内容、申请靶机、提交 flag 并获取 flag 验证结果。不过在实践上，平台会缓存很多东西（如题目描述、附件、可在平台侧执行的 checker 等）。
-- 平台负责管理赛事。赛事业务指的是：赛事数据管理（例如比赛开始时间和结束时间）；题目的编排（包括顺序和标签）；分数的维护；排行榜的生成。
+- 平台负责管理赛事。赛事业务指的是：赛事数据管理（例如公告板、比赛开始时间和结束时间）；题目的编排（包括顺序和标签）；分数的维护；排行榜的生成。
+- 用户必须能通过平台服务器的端口访问靶机。这需要平台服务器执行一些端口转发任务。
 
 ### 题目中心
 
-题目中心有两个职责：管理题目，以及维护靶机。
+题目中心有两个职责：管理题目，以及维护靶机。甚至可以说，这两个功能几乎是独立的——所有类型的题目中心都可以复用同一套题目管理逻辑（因为题目的字段是固定的），但靶机管理方式千差万别。根据平台发来的请求，题目中心要做到：申请靶机；释放靶机；靶机延期；执行靶机侧脚本（例如验证 patch 是否成功）。
 
-【TODO】
+前文提到，平台服务器会用自己的端口作为靶机端口之镜像。所以，平台服务器本身必须能访问靶机，否则端口转发无法进行。一般情况下这不成问题，但不排除有极端情况，使得题目中心可以直连靶机而平台服务器不能。此时需要题目中心也做端口转发。
+
+Cranberry 提供三种官方题目中心：Docker 型（包括单容器和多容器，基于 Docker Swarm）、VM 型（基于 PVE）、静态共享型（即题目中心只管理题目，不管理靶机的生命周期，由出题人自行启动共享靶机并将 ip、端口填入题目信息中）。大部分场合下，这几种题目中心已经足够赛事使用。不过，二次开发者也可以 DIY 自己的题目中心。举个例子：假设你想在 Cranberry 上聚合第三方平台的题（类似于 [vjudge](https://vjudge.net/)），则你可以实现一个题目中心，申请靶机时就向第三方平台请求容器，然后转发端口。
+
+
+
+### 实例管理器
+
+实例管理器一般是第三方的容器编排引擎或 hypervisor，如 Docker Swarm、K8s、PVE、CloudStack、OpenStack。
+
+实例管理器与题目中心是一一对应的，题目中心会直接向实例管理器发送指令。官方提供的题目中心，对应的实例管理器是 Docker Swarm 和 PVE，它们都有集群能力，但是我们一般推荐单计算节点部署。如果你想使用 K8s 担任实例管理器，那么你需要 DIY 一个题目中心——别担心，我们不会让你写重复的题库管理代码。详情参考[《二次开发指南》](/docs/guide/二次开发指南/)的相关章节。
+
