--- a/content/docs/guide/二次开发指南.md
+++ b/content/docs/guide/二次开发指南.md
@@ -9,20 +9,34 @@ weight: 3
 > TODO
 
 
-## 接入外部身份认证
+## 平台：接入外部身份认证
 
 
-## 特殊榜单
+## 平台：特殊榜单
 
-## 添加 writeup 上传接口
+## 平台：添加 writeup 上传接口
 
-## 题目按顺序解锁
+## 平台：题目按顺序解锁
 
-## 支持新赛制
+## 平台：支持新赛制
+
+> 需求：支持取证赛制，选手对每一道题目上传解答，裁判看完后给分。
+
+有两种解决方案。第一种方案是不修改平台，而是去编写一个小网站（作为静态共享靶机）负责收题解并评分（可以通过 jwt 方式证明选手在平台上的 user id）；平台定期从靶机那里收集全场分数。不过对选手而言体验不算太好，得在赛事平台和评分平台之间来回折腾。
+
+第二种方案是略微修改平台：将提交 flag 的按钮改成上传题解的按钮，并将文件上传到 MinIO（如同上传图片那样），然后走常规的 submit flag 流程，不过这次 flag 为文件路径；裁判盯着最新提交的 flag，找到文件，判分后调用平台接口直接给分。
 
 
 
+## 题目中心：集成第三方题目
 
+> 类似于 vjudge.net，把别人的题当成是自己的题。
+
+
+
+## 题目中心：采用云容器计算服务
+
+> 从云服务提供商那里采购 K8s 编排服务，用来给选手创建靶机。
 
 
 
